CMAKE_MINIMUM_REQUIRED(VERSION 2.4)
IF(COMMAND CMAKE_POLICY)
  CMAKE_POLICY(SET CMP0003 NEW)
ENDIF(COMMAND CMAKE_POLICY)

PROJECT(ITK_V3D_Plugins)


FIND_PACKAGE(ITK REQUIRED)
IF(ITK_FOUND)
  INCLUDE(${ITK_USE_FILE})
ENDIF(ITK_FOUND)


FIND_PACKAGE(Qt4 REQUIRED)
INCLUDE( ${QT_USE_FILE} )

INCLUDE(CTest)

INCLUDE(CPack)


FIND_PATH(V3D_BINARY_DIR v3d)
SET(INSTALLATION_DIRECTORY ${V3D_BINARY_DIR}/plugins)


IF(NOT LIBRARY_OUTPUT_PATH)
  SET (LIBRARY_OUTPUT_PATH 
    ${ITK_V3D_Plugins_BINARY_DIR}/bin
    CACHE INTERNAL "Output directory for the shared libraries.")
ENDIF(NOT LIBRARY_OUTPUT_PATH)

INCLUDE(${PROJECT_SOURCE_DIR}/CMake/PluginConfiguration.cmake)

ADD_SUBDIRECTORY(Source)
ADD_SUBDIRECTORY(Testing)

