add_subdirectory( 5dstackconverter )
add_subdirectory( canvas_eraser )
add_subdirectory( change_pixel_value )
add_subdirectory( dt )
add_subdirectory( edge_of_maskimg )
add_subdirectory( gaussianfilter )
add_subdirectory( image_xyz_resolution )
# add_subdirectory( linkerfile_generator )
# add_subdirectory( minMaxfilter )
# add_subdirectory( recenterimage )
# add_subdirectory( regiongrow )
# add_subdirectory( rotateimg90 )
# add_subdirectory( v3dplugin_call_each_other_example )
# add_subdirectory( v3dplugin_multi_image_interface_example )
# add_subdirectory( v3dplugin_push_image_and_object_example )
# add_subdirectory( v3dplugin_single_image_interface_example )
